Updated localized translations
Added new translations.
Removed duplicate entries.

--- a/MEL.Web/Resources/SharedResource.es-HN.resx
+++ b/MEL.Web/Resources/SharedResource.es-HN.resx
@@ -342,14 +342,8 @@
   <data name="Use your application account to log in" xml:space="preserve">
     <value>Use su cuenta de aplicación para iniciar sesión</value>
   </data>
-  <data name="To access the M&amp;E Insight Demo, please use the following account" xml:space="preserve">
-    <value>Para acceder a la demostración de M&amp;E Insight, utilice la siguiente cuenta</value>
-  </data>
   <data name="Username" xml:space="preserve">
     <value>Nombre de usuario</value>
-  </data>
-  <data name="Please contact us if you are having trouble login in" xml:space="preserve">
-    <value>Póngase en contacto con nosotros si tiene problemas para iniciar sesión</value>
   </data>
   <data name="Forgot your password?" xml:space="preserve">
     <value>¿Olvidaste tu contraseña?</value>
@@ -536,9 +530,6 @@
   </data>
   <data name="none selected" xml:space="preserve">
     <value>ninguna seleccionada</value>
-  </data>
-  <data name="score" xml:space="preserve">
-    <value>Puntuación</value>
   </data>
   <data name="years old" xml:space="preserve">
     <value>años</value>
@@ -897,9 +888,6 @@
   <data name="Log in" xml:space="preserve">
     <value>Iniciar sesión</value>
   </data>
-  <data name="Log In" xml:space="preserve">
-    <value>Iniciar sesión</value>
-  </data>
   <data name="Enrollments" xml:space="preserve">
     <value>Inscripciones</value>
   </data>
@@ -1032,9 +1020,6 @@
   <data name="Reset password" xml:space="preserve">
     <value>Restablecer Contraseña</value>
   </data>
-  <data name="Reset Password" xml:space="preserve">
-    <value>Restablecer Contraseña</value>
-  </data>
   <data name="Middle name" xml:space="preserve">
     <value>Segundo nombre</value>
   </data>
@@ -1116,16 +1101,13 @@
   <data name="Attendance unit" xml:space="preserve">
     <value>Unidad para Asistencia. </value>
   </data>
-  <data name="Attendance Unit" xml:space="preserve">
-    <value>Unidad para Asistencia. </value>
-  </data>
   <data name="Office" xml:space="preserve">
     <value>Unidad/Departamento</value>
   </data>
   <data name="Home" xml:space="preserve">
     <value>Inicio</value>
   </data>
-  <data name="An open source Monitoring and Evaluation Data Management System for International Development Projects" xml:space="preserve">
+  <data name="An open source monitoring and evaluation data management system for international development projects" xml:space="preserve">
     <value>Un Sistema de Gestión de Datos de Monitoreo y Evaluación de código abierto para Proyectos de Desarrollo Internacional</value>
   </data>
   <data name="Navigate through your organizations, schools, partners, groups / cohorts, and participant enrollment lists" xml:space="preserve">
@@ -1143,13 +1125,19 @@
   <data name="Read the user guides and documentation" xml:space="preserve">
     <value>Lea las guías de usuario y la documentación.</value>
   </data>
-  <data name="An open source Monitoring and Evaluation" xml:space="preserve">
-    <value>Un sistema de gestión de datos de monitoreo</value>
+  <data name="M&amp;E Insight is an open source monitoring and evaluation data management system for international development projects" xml:space="preserve">
+    <value>M&amp;E Insight es un sistema de gestión de datos de monitoreo y evaluación de código abierto para proyectos de desarrollo internacional</value>
   </data>
-  <data name="Data Management System for" xml:space="preserve">
-    <value>y evaluación de código abierto para</value>
+  <data name="Home Page" xml:space="preserve">
+    <value>Página de inicio</value>
   </data>
-  <data name="International Development Projects" xml:space="preserve">
-    <value>proyectos de desarrollo internacional</value>
+  <data name="A monitoring and evaluation data management system" xml:space="preserve">
+    <value>Un sistema de gestión de datos de seguimiento y evaluación.</value>
+  </data>
+  <data name="Visit M&amp;E Insight on GitHub!" xml:space="preserve">
+    <value>¡Visita M&amp;E Insight en GitHub!</value>
+  </data>
+  <data name="Remember me?" xml:space="preserve">
+    <value>¿Recuérdame?</value>
   </data>
 </root>
